fixed spelling error and nav spacing

--- a/public/main.css
+++ b/public/main.css
@@ -581,7 +581,7 @@ button {
 		display: none;
 		margin-top: 55px;
 		min-width: 0px;
-		padding-right: 0px;
+		padding-right: 5px;
 		padding-top: 0px;
 		background: white;
 		width: 100%;
